added bottom sec section to top div oustide of container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
            With ConcertStream.com, the Fillmore, Red Rocks, Budokan and Stubbs are never more than a click away!
          </p>
 
-         <a class="waves-effect waves-light btn-large signUp">Start Rocking!</a>
+         <a class="btn-large signUp">Start Rocking!</a>
           
         </div>
       </div>
@@ -59,6 +59,20 @@
       </div>
 
     </div>
+
+    <div class = "foot">
+
+            <div class="footTop center valign-wrapper">
+          <p class = "valign">ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+          </p>
+      </div>
+          </div>
+    </div>
+    <div class="botContent">
+      <img src="images/background1.jpg" class = "botImg">
+      <div class="container">
+        
+      </div>
     </div>
 
 
