--- a/index.html
+++ b/index.html
@@ -71,7 +71,20 @@
     <div class="botContent">
       <img src="images/background1.jpg" class = "botImg">
       <div class="container">
-        
+        <div class="card">
+            <div class="card-content">
+              <div class="center">
+                <i class="fa fa-download fa-3x iconCard"></i>
+              </div>
+              <h4 class="card-title titleCard center">Card Title</h4>
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+              <a href="#">This is a link</a>
+            </div>
+          </div>
       </div>
     </div>
 
