--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
           <div class="card cardClass">
             <div class="card-content">
               <div class="center">
-                <i class="fa fa-download fa-3x iconCard"></i>
+                <i class="fa fa-gift fa-3x iconCard"></i>
               </div>
-              <h4 class="card-title titleCard center">Download Concerts</h4>
-              <p class = "center">Scream encore from the train, the bar, even your bedroom!</p>
+              <h4 class="card-title titleCard center">Give Away Virtual Tickets</h4>
+              <p class = "center">Buy individual concerts for your friends at a discounted price! </p>
             </div>
           </div>
 
