--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
       </div>
           </div>
     </div>
+
     <div class="botContent">
+      <div id="wrapper">
       <img src="images/background1.jpg" class = "botImg">
+      </div>
       <div class="container">
         <div class="card cardClass">
             <div class="card-content">
@@ -104,10 +107,10 @@
           <div class="card cardClass">
             <div class="card-content">
               <div class="center">
-                <i class="fa fa-download fa-3x iconCard"></i>
+                <i class="fa fa-random fa-3x iconCard"></i>
               </div>
-              <h4 class="card-title titleCard center">Download Concerts</h4>
-              <p class = "center">Scream encore from the train, the bar, even your bedroom!</p>
+              <h4 class="card-title titleCard center">Discover More</h4>
+              <p class = "center">Using your current tastes, we will recommend music that you'll love!</p>
             </div>
           </div>
       </div>
