changed target of arrow button

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
       </div>
       <div class="icon center"> <a href="#bottom" class = "jumper"><i class="fa fa-arrow-down fa-4x"></i> </a>
       </div>
-
+      <div id="bottom"> </div>
       <div class="features">
-        <div id="bottom"> </div>
         <div class="row">
           <div class="col s2"> <i class="fa fa-share-alt fa-2x"></i> </div>
           <div class="col s10"> <p> Share your experiences with the world</p> </div>
@@ -114,6 +113,16 @@
             </div>
           </div>
       </div>
+    </div>
+
+    <div class="bottomStuff">
+      <div class = "footStuff">
+
+            <div class="footTop center valign-wrapper">
+          <p class = "valign">ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+          </p>
+      </div>
+          </div>
     </div>
 
 
