chanmade changes to position attributes/added footer

--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@
           </div>
       </div>
     </div>
+  <div class="bottomStuff">
+      <div class="row">
+        <div class = "foot">
 
-    <div class="bottomStuff">
-      <div class = "footStuff">
-
-            <div class="footTop center valign-wrapper">
-          <p class = "valign">ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+            <div class="footBot center valign-wrapper">
+          <p class = "valign">ConcertSteam.com is the easiest way to see concerts around the world. 
           </p>
       </div>
           </div>
-    </div>
-
-
+      </div>
+    
+  </div>
 
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
