added button to bottom bar

--- a/index.html
+++ b/index.html
@@ -116,12 +116,18 @@
     </div>
   <div class="bottomStuff">
       <div class="row">
-        <div class = "foot">
+        <div class = "foot footBot">
 
-            <div class="footBot center valign-wrapper">
+            <div class= "center valign-wrapper">
           <p class = "valign">ConcertSteam.com is the easiest way to see concerts around the world. 
           </p>
+
       </div>
+      <div class="center botBut">
+       <a class="btn-large signUp">Start Rocking!</a>
+       </div>
+
+
           </div>
       </div>
     
