added flexboxes for height control

--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
             </div>
           </div>
       </div>
-    </div>
-  <div class="bottomStuff">
+      <div class="bottomStuff">
       <div class="row">
-        <div class = "foot footBot">
+        <div class = "footBot">
 
             <div class= "center valign-wrapper">
           <p class = "valign">ConcertSteam.com is the easiest way to see concerts around the world. 
@@ -132,6 +131,7 @@
       </div>
     
   </div>
+    </div>
 
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
