completed flexbox for mobile

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
       </div>
       <div class="bottomStuff">
       <div class="row">
-        <div class = "footBot">
+        <div>
 
-            <div class= "center valign-wrapper">
+            <div class= "center valign-wrapper footBot">
           <p class = "valign">ConcertSteam.com is the easiest way to see concerts around the world. 
           </p>
 
