begun work on desktop

--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
     </div>
 
     <div class="botContent">
-      <div id="wrapper">
       <img src="images/background1.jpg" class = "botImg">
-      </div>
-      <div class="container">
+      <div class="container cardStuff">
         <div class="card cardClass">
             <div class="card-content">
               <div class="center">
