--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
           <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+          <link rel="stylesheet" type="text/css" href="css/media.css">
           <link rel="stylesheet" type="text/css" href="css/css.css">
+
       
         <body>
           <div class="navbar-fixed">
@@ -19,7 +21,7 @@
               <div class="nav-wrapper">
               <p class= "left loTop">ConcertSteam.com</p>
               <ul id="nav-mobile" class="right loRight">
-                <li><a>Login</a></li>
+                <li id= "logIn"><a>Login</a></li>
             </ul>
       </div>
   </nav>
@@ -27,7 +29,7 @@
   <div id="topDiv">
         <div class="container">
       <div class="row">
-        <div class="col s12 center title">
+        <div class="col s12 l12 center title">
          <h4 id = "titleFront">
           Live stream your favorite bands' concerts
          </h4>
@@ -43,17 +45,17 @@
       </div>
       <div id="bottom"> </div>
       <div class="features">
-        <div class="row">
-          <div class="col s2"> <i class="fa fa-share-alt fa-2x"></i> </div>
-          <div class="col s10"> <p> Share your experiences with the world</p> </div>
+        <div class="row center">
+          <div class="col s2 l4"> <i class="fa fa-share-alt fa-2x"></i> </div>
+          <div class="col s10 l8"> <p class = "left"> Share your experiences with the world</p> </div>
         </div>
-        <div class="row">
-          <div class="col s2"> <i class="fa fa-file-text fa-2x"></i> </div>
-          <div class="col s10"> <p> Get advanced set lists for shows.</p> </div>
+        <div class="row center">
+          <div class="col s2 l4"> <i class="fa fa-file-text fa-2x"></i> </div>
+          <div class="col s10 l8"> <p class = "left"> Get advanced set lists for shows.</p> </div>
         </div>
-        <div class="row">
-          <div class="col s2"> <i class="fa fa-cart-arrow-down fa-2x"></i> </div>
-          <div class="col s10"> <p> Recieve discounts on merch!</p> </div>
+        <div class="row center">
+          <div class="col s2 l4"> <i class="fa fa-cart-arrow-down fa-2x"></i> </div>
+          <div class="col s10 l8"> <p class = "left"> Recieve discounts on merch!</p> </div>
         </div>
       </div>
 
@@ -61,15 +63,17 @@
 
     <div class = "foot">
 
-            <div class="footTop center valign-wrapper">
-          <p class = "valign">ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+            <div class="footTop valign-wrapper">
+          <p class = "valign text-center">ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
           </p>
       </div>
           </div>
     </div>
 
     <div class="botContent">
+      <div class="containE">
       <img src="images/background1.jpg" class = "botImg">
+      </div>
       <div class="container cardStuff">
         <div class="card cardClass">
             <div class="card-content">
