added rounded buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
            With ConcertStream.com, the Fillmore, Red Rocks, Budokan and Stubbs are never more than a click away!
          </p>
 
-         <a class="btn-large signUp">Start Rocking!</a>
+         <a class="btn-large signUp z-depth-2">Start Rocking!</a>
           
         </div>
       </div>
@@ -119,13 +119,13 @@
       <div class="row">
         <div>
 
-            <div class= "center valign-wrapper footBot">
-          <p class = "valign">ConcertSteam.com is the easiest way to see concerts around the world. 
+            <div class= "center valign-wrapper">
+          <p class = "valign footBot">ConcertSteam.com is the easiest way to see concerts around the world. 
           </p>
 
       </div>
       <div class="center botBut">
-       <a class="btn-large signUp">Start Rocking!</a>
+       <a class="btn-large signUp z-depth-2">Start Rocking!</a>
        </div>
 
 
