tweaked coloring of letters

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title> Test</title>
+        <title> Concert Steam</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css">
         <link rel="author" href="humans.txt">
@@ -62,10 +62,11 @@
     </div>
 
     <div class = "foot">
-
-            <div class="footTop valign-wrapper">
-          <p class = "valign text-center">ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+            <div class="footTop">
+          <p class = "someStuff">
+            ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
           </p>
+          </div>
       </div>
           </div>
     </div>
