completed desktop version

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
           <link rel="stylesheet" type="text/css" href="css/media.css">
           <link rel="stylesheet" type="text/css" href="css/css.css">
+          <link rel="stylesheet" type="text/css" href="css/desktop.css">
 
       
         <body>
