pushing to github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
     <div class = "foot">
             <div class="footTop">
           <p class = "someStuff">
+            <span>
             ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+            </span>
           </p>
           </div>
       </div>
