made changes to the font

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           
         </div>
       </div>
-      <div class="icon center"> <a href="#bottom" class = "jumper"><i class="fa fa-arrow-down fa-4x"></i> </a>
+      <div class="icon center hide-on-med-and-up"> <a href="#bottom" class = "jumper"><i class="fa fa-arrow-down fa-4x"></i> </a>
       </div>
       <div id="bottom"> </div>
       <div class="features">
@@ -65,7 +65,7 @@
     <div class = "foot">
             <div class="footTop">
           <p class = "someStuff">
-            ConcertSteam.com is the easiest way to see concerts that you can't get a ticket to. 
+            ConcertSteam.com is the easiest way to see concerts if you can't get a ticket. 
           </p>
           </div>
       </div>
