changed spacing of .features for tablets

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
       <div id="bottom"> </div>
       <div class="features">
         <div class="row center">
-          <div class="col s2 l4"> <i class="fa fa-share-alt fa-2x"></i> </div>
-          <div class="col s10 l8"> <p class = "left"> Share your experiences with the world</p> </div>
+          <div class="col s2 l4 m4"> <i class="fa fa-share-alt fa-2x"></i> </div>
+          <div class="col s10 l8 m8"> <p class = "left"> Share your experiences with the world</p> </div>
         </div>
         <div class="row center">
-          <div class="col s2 l4"> <i class="fa fa-file-text fa-2x"></i> </div>
-          <div class="col s10 l8"> <p class = "left"> Get advanced set lists for shows.</p> </div>
+          <div class="col s2 l4 m4"> <i class="fa fa-file-text fa-2x"></i> </div>
+          <div class="col s10 l8 m8"> <p class = "left"> Get advanced set lists for shows.</p> </div>
         </div>
         <div class="row center">
-          <div class="col s2 l4"> <i class="fa fa-cart-arrow-down fa-2x"></i> </div>
-          <div class="col s10 l8"> <p class = "left"> Recieve discounts on merch!</p> </div>
+          <div class="col s2 l4 m4"> <i class="fa fa-cart-arrow-down fa-2x"></i> </div>
+          <div class="col s10 l8 m8"> <p class = "left"> Recieve discounts on merch!</p> </div>
         </div>
       </div>
 
